--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,14 +10,18 @@
     --var-Roboto-font :'Roboto', sans-serif;
     --var-poppins-font : 'Poppins', sans-serif;
     --var-light-shadow :  0 0 20px rgba(171, 169, 169, 0.459);
+    --var-dark-shadow : 0 0 10px rgba(0, 0, 0, 0.477);
     --button-radius  : 5px;
     --button-colors : rgb(53, 141, 255);
     --var-input-border : 1px solid rgba(0, 0, 0, 0.534);
     --var-heading-clor :  rgb(11, 37, 82);
+    --var-nav-bg-mobile : linear-gradient(to left , rgb(17, 75, 137) ,var(--var-bg-light-color));
+    --var-extra-light-shadow :0 0 10px rgba(128, 128, 128, 0.236);
     /* animations variables */
     --var-paragraph-animation : paragraph 1.5s;
     --var-heading-animation :  heading 1.5s ;
     --var-image-animation-zoom :  imagezoom 1.5s ;
+    --var-left-slide : leftslide 1.3s ;
 }
 /* scroll bar css */
 ::-webkit-scrollbar {
@@ -37,7 +41,7 @@
     box-sizing: border-box;
 }
 body{
-  overflow-x: hidden;
+
   width: 100%;
   height: 100%;   
 }
@@ -142,7 +146,104 @@ body{
     border-radius:var(--button-radius);
 
 }
+.toggle-button{
+    display: none;
+}
+.close-button{
+    display: none;
+}
+/* media query for navbar */
+@media  (max-width:760px) {
+    
+    .button{
+        position: relative;
+        left: 20px;
+    }
+    .toggle-button{
+        display: block;            
+        padding: 10px 50px!important;    
+        position: relative;
+        bottom: 10px;
+    }
 
+    .close-button
+    {
+        display: block;
+        border-bottom:transparent!important;
+        justify-content: end;
+    }
+    .close-button a
+    {
+        padding: 10px 20px;
+        border: 2px solid white;
+        box-shadow:var(--var-dark-shadow);
+        color: var(--var-color-white);
+        font-weight: bolder;
+        position: relative;
+        bottom: 10px;
+        right: 10px;
+        text-align: center;
+        
+    }
+    .close-button a :hover{
+        background-color: var(--button-colors);
+    }
+    .navbar{
+        display: block;
+        
+    }
+    .links{
+        background:var(--var-nav-bg-mobile);
+        position: fixed;
+        display: none;
+        z-index: 10000;
+        height: 100%;
+        margin: 0;
+        padding: 10px;
+        right: 10px;
+        top: 0;
+        width: 100%;
+        animation: var(--var-left-slide);
+    }
+    .links>ul{
+        
+        display: block;
+        padding: 10px;
+        list-style: none;
+    }
+    .links li {
+        width: 350px;
+        margin: 10px;
+        padding: 10px;  
+        border-bottom: 1px solid var(--var-color-white);
+    }
+    .page-links>a{
+        font-size: 25px;
+        padding: 10px;
+       
+        margin-top: 10px;
+    }
+
+    @keyframes leftslide {
+        from
+        {
+            opacity: 0;
+            transform: translate(-100%);
+        }
+        to
+        {
+            opacity: 1;
+        }
+    }
+    .get-started-link a{
+        white-space: nowrap;
+    }
+    .brand{
+        position: relative;
+        left:50px;
+    }
+
+    }
 /* hero banner section*/
 .hero-banner{
     padding: 30px;
@@ -304,6 +405,62 @@ body{
     animation: var(--var-image-animation-zoom);
     font-family: var(--var-poppins-font);
  }
+
+/* banner section mediaquery */
+@media (max-width:750px)
+{        .banner-container
+    {
+        width: 100%;
+    }   
+        .hero-banner
+        {
+            display: block;
+        }
+        .hero-text{
+            width: auto;
+        }
+        .hero-text h1{
+           
+            font-size: 70px;
+            word-wrap: break-word;
+            position: relative;
+            bottom: 50px;
+            font-weight: bolder;
+            text-align: center;
+            white-space: normal;
+        }
+        .hero-text p 
+        {
+            text-align: center;
+            position: relative;
+            bottom: 40px;
+        }
+        .hero-text
+        {
+            height: auto;
+        }
+
+        .hero-image
+        {
+            display: none;
+        }
+        .hero-text input{
+            width: 100%;
+        }
+        .hero-text button{
+            width: 100%;
+            margin-top: 10px;
+        }
+
+        .labels
+        {
+            display: none;
+        }
+        .bottom-tags
+        {
+            display: none;
+        }
+}
  /* offer section */
 
  .offer-container
@@ -318,11 +475,49 @@ body{
     text-align: center;
     font-family: var(--var-poppins-font);
     color:var(--var-heading-clor);
-    font-size: 45px;
+    font-size: 55px;
     padding: 10px;
 }
 
-.offer-text p {
-    text-align: center;
-    width: 600px;
+#p {
+  color: red;
+  text-align: center;
+  margin: auto;
+  color: grey;
+  padding-top: 10px;
+  width: 630px;
+}
+.offer-cards-row
+{   position: relative;
+    top: 50px;
+    display: grid;
+    margin: auto;
+    justify-content: center;
+    grid-template-columns: auto auto auto;    
+    column-gap: 30px;
+}
+.offer-cards-row > .cards {
+    padding: 20px;
+    min-height: 200px;
+    height: auto;
+    max-width: 400px;
+    width: auto;
+    background: transparent;
+    box-shadow:var(--var-extra-light-shadow);
+    border: 1px solid rgba(0, 0, 0, 0.265);
+    border-radius: 10px;
+    text-transform: capitalize;
+}
+.offer-cards-row > .cards h4{
+    font-size: 50px;
+    padding: 10px;
+    font-weight: bold;
+}
+.offer-cards-row > .cards h5{
+    font-size: 25px;
+    padding: 10px;
+}
+.offer-cards-row > .cards p{
+   
+    padding: 10px;
 }
