changes in home page kusloom you have make everything responsive

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@
     --button-radius  : 5px;
     --button-colors : rgb(53, 141, 255);
     --var-input-border : 1px solid rgba(0, 0, 0, 0.534);
-    --var-heading-clor :  rgb(11, 37, 82);
+    --var-heading-clor :  rgb(15, 56, 127);
     --var-nav-bg-mobile : linear-gradient(to left , rgb(17, 75, 137) ,var(--var-bg-light-color));
     --var-extra-light-shadow :0 0 10px rgba(128, 128, 128, 0.236);
     /* animations variables */
@@ -31,7 +31,7 @@
 ::-webkit-scrollbar-thumb
 {
     background-color:var(--var-bg-light-color);
-    border-radius:50% ;
+    border-radius:10px ;
 }
 /* scroll bar css ends */
 *{
@@ -39,6 +39,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 body{
 
@@ -69,8 +70,10 @@ body{
   background-color: var(--var-color-white);
   position: fixed;
   width: 100%;
+  box-shadow: var(--var-dark-shadow);
   animation: fade 1.2s;
   z-index: 1000;
+  height: 90px;
 }
 @keyframes fade {
     from
@@ -249,7 +252,7 @@ body{
     padding: 30px;
     width: auto;
     display: grid;
-    height:800px;
+    height:100vh;
     overflow: hidden;
     grid-template-columns:auto auto;
     column-gap: 200px;
@@ -377,30 +380,11 @@ body{
     }
 }
  /* bottom tags */
- .bottom-tags
- {  display: grid;
-    grid-template-columns:auto auto auto auto ;
-    justify-content: center;
-    column-gap: 200px;
+ .bottom-text{
     position: relative;
-    right: 50px;
-    font-family: var(--var-poppins-font);
-    font-size: 18px;
-    row-gap: 20px;
-    bottom: 60px;   
-    color: var(--var-color-white);
-    white-space: nowrap;
- }
-
- .company{
-    width: 30px;
-    text-align: center;
-    margin-left: 10px;
-    animation: var(--var-heading-animation);
-    padding: 10px;
-    color: var(--var-color-white);
- }
- .bottom-text  p{
+    bottom: 20px;
+}
+.bottom-text  p{
     color: var(--var-color-white);
     animation: var(--var-image-animation-zoom);
     font-family: var(--var-poppins-font);
@@ -504,7 +488,7 @@ body{
     width: auto;
     background: transparent;
     box-shadow:var(--var-extra-light-shadow);
-    border: 1px solid rgba(0, 0, 0, 0.265);
+    border: 1px solid rgba(0, 0, 0, 0.105);
     border-radius: 10px;
     text-transform: capitalize;
 }
@@ -512,6 +496,7 @@ body{
     font-size: 50px;
     padding: 10px;
     font-weight: bold;
+    color: blue;
 }
 .offer-cards-row > .cards h5{
     font-size: 25px;
@@ -520,4 +505,106 @@ body{
 .offer-cards-row > .cards p{
    
     padding: 10px;
+}
+/* feature section */
+.feature-section
+{
+    width: 1000px;
+    min-height: 550px;
+    height: auto;
+    display: grid;
+    grid-template-columns: 400px 450px;
+    column-gap: 200px;
+    margin: auto;
+    position: relative;
+    top:30px;
+    padding: 10px;
+}
+
+.right-side-data
+{
+    background: url("../images/feature-img.jpg") ;
+    background-position: center;
+    background-size: cover;
+    object-fit:cover;
+    height: 430px;
+    border-radius: var(--button-radius);
+    width: 350px;
+    position: relative;
+    bottom: 80px;
+    box-shadow: var(--var-extra-light-shadow);
+}
+
+.right-side-data .text-data
+{
+    background-color: white;
+    margin: 6px;
+    padding: 10px;
+    position: relative;
+    top: 200px;
+    border-radius: var(--button-radius);
+    box-shadow: var(--var-light-shadow);
+    right: 100px;
+    width: 250px;
+}
+
+/* left section */
+.left-side-data{
+    padding: 30px;
+    position: relative;
+    bottom: 50px;    
+}
+.left-side-data h4{
+    font-size: 15px;
+    color: blue;
+}
+.left-side-data h3
+{
+    font-size: 30px;
+    white-space: nowrap;
+    font-family: arial!important;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-weight: bolder;
+    text-transform: uppercase;
+}
+.left-side-data > p{
+    font-size: 14px ;
+    padding-top: 10px;
+    padding-bottom: 30px;
+}
+
+.label-text-1{
+    display: flex;
+    column-gap: 10px;
+}
+.label-text-1 h5 {
+    position: relative;
+    padding-bottom: 3px;
+}
+.label-text-1 p {
+    font-size: 12px;
+    padding-bottom: 30px;
+}
+/* icons */
+
+#pixel
+{   color: white;
+    background: blue;
+    border-radius: var(--button-radius);
+    padding: 10px;
+    box-shadow: var(--var-extra-light-shadow);
+}
+#progress
+{
+    color: white;
+    background: red;
+    border-radius: var(--button-radius);
+    padding: 10px;
+    box-shadow: var(--var-extra-light-shadow);
+}
+#checked
+{
+    color: blue;
+    
 }
