--- a/assets/css/signup.css
+++ b/assets/css/signup.css
@@ -45,9 +45,71 @@ body{
        top: 10%;
        border-radius: 5px;
        display: grid;
-       grid-template-columns: 350px 350px;
+       grid-template-columns: 350px auto;
 }
 /* text */
 .text-sign-up{
     background-color: black;
+}
+/* form-section */
+.content {
+    padding: 18px;
+    overflow: hidden;
+}
+.content h1{
+    font-size: 1.40rem;
+    font-family: var(--var-Roboto-font);
+    padding-left: 15px;
+}
+.content p{
+    font-size: 12px;
+    color: rgb(73, 73, 85);
+    font-family: var(--var-Roboto-font);
+    padding-left: 15px;
+    position: relative;
+    bottom: 10px;
+}
+.inputs{
+   padding: 10px;
+   display: grid;
+   grid-template-columns: auto auto;
+   column-gap: 20px;
+}
+.content >label{
+    font-family: var(--var-Roboto-font);
+    font-size: 12px;
+    position: relative;
+    bottom: 8px;
+    left: 10px;
+    margin-top: 15px;
+    padding-left: 5px;
+}
+.content label{
+    font-family: var(--var-Roboto-font);
+    font-size: 12px;
+    position: relative;
+    bottom: 8px;
+    margin-top: 15px;
+    padding-left: 5px;
+}
+.form-style{
+    width: 280px;
+    padding: 8px;
+    border: 1px solid rgb(171, 169, 169);
+    margin-left: 10px;
+}
+.input-data > .form-style{
+   
+        width: 120px;
+        padding: 8px;
+        border: 1px solid rgb(171, 169, 169);
+        margin-left: 0 ;
+        margin-bottom: 10px;
+}
+.form-style::placeholder{
+    font-size: 10px;
+}
+.form-style:focus{
+    outline-color: var(--button-colors);
+    box-shadow: inset 0 0 5px var(--button-colors);
 }
