--- a/assets/css/signup.css
+++ b/assets/css/signup.css
@@ -97,6 +97,8 @@ body{
     padding: 8px;
     border: 1px solid rgb(171, 169, 169);
     margin-left: 10px;
+    /* margin-top: 5px; */
+    margin-bottom: 15px;
 }
 .input-data > .form-style{
    
@@ -112,4 +114,23 @@ body{
 .form-style:focus{
     outline-color: var(--button-colors);
     box-shadow: inset 0 0 5px var(--button-colors);
+}
+#conditions{
+    font-size: 12px;
+    font-family: var(--var-Roboto-font);
+}
+#terms-conditions{
+    font-size: 12px;
+    font-family: var(--var-Roboto-font);
+    color: blue;
+}
+.submit-btn{
+    width: 100%;
+    margin-top: 15px;
+    padding: 7px;
+    background-color: var(--button-colors);
+    border: 1px solid var(--button-colors);
+    border-radius: var(--button-radius);
+    color: white;
+    box-shadow: var(--var-light-shadow);
 }
