--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -405,7 +405,7 @@ body{
         }
         .hero-text h1{
            
-            font-size: 70px;
+            font-size: 50px;
             word-wrap: break-word;
             position: relative;
             bottom: 50px;
@@ -520,7 +520,6 @@ body{
     top:30px;
     padding: 10px;
 }
-
 .right-side-data
 {
     background: url("../images/feature-img.jpg") ;
@@ -608,3 +607,688 @@ body{
     color: blue;
     
 }
+/* MediaQuery Start */
+@media only screen and (max-width: 300px) and (min-width: 88px) {
+    /* navbar section mediaquery start */
+    .navbar
+    .brand 
+    img
+    {
+        width: 100px;
+        height: 100px;
+    }
+    .navbar
+    .button 
+    .register-link 
+    a
+    {
+        padding: 0;
+        margin: 0;
+        display: inline-block;
+    }
+    .navbar
+    .button
+    .get-started-link
+    {
+        width: 100px;
+        font-size: 15px;
+        margin-left: -60px;
+    }
+    .navbar 
+    .button 
+    .toggle-button 
+    {
+        padding: 0;
+        width: 100%;
+        display: inline-block;
+        align-items: center;
+        margin-left: 70px;
+    }
+    .navbar 
+    .button 
+    .toggle-button 
+    i
+    {
+        font-size: 200px;
+        margin-left: -30px;
+    } 
+    .navbar 
+    .button
+     ul
+     {
+        margin:auto;
+        padding: 0px;
+        box-sizing: border-box;
+    }
+    .navbar 
+    .button 
+    a
+    {
+        width: 100px;
+    }
+    /* navbar section mediaquery end */
+    .navbar{
+        height: 150px;
+    }
+    /* banner section mediaquery start */
+    .hero-banner
+    .hero-text h1 
+    {
+        margin: auto;
+        font-size: 30px;
+        padding: 10px;
+        text-align: center;
+    }
+    .hero-banner 
+    .hero-text
+    .offer-text
+    h1
+    {
+        text-align: center;
+        font-size: 10px;
+        margin: auto;
+        padding: 0;
+    }
+    .labels 
+    {
+        width: 100%;
+        display: flex;
+        margin-top: 70px;
+        padding: 10px;
+    }   
+    /* banner section mediaquery end */
+    /* offer section mediaquery start*/
+    #p {
+        text-align: center;
+        margin: auto;
+        font-size: 20px;
+        padding: 10px;
+        width: 100% ;
+        color: grey;
+        padding-top: 10px;
+    }
+    .offer-cards-row 
+    > 
+    .cards
+    {
+        font-size: 25px;
+        margin: 20px;
+    }
+    .offer-cards-row  {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+    .offer-container
+    {
+        padding: 0;
+    }
+    .feature-section
+    {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+    /* offer section mediaquery end */
+    /* feature section start*/
+    /* left Section mediaquery start */
+    .feature-section 
+    .left-side-data
+    {
+        margin-top: 500px;
+    }
+    .left-side-data{
+        padding: 30px;
+        position: relative;
+        bottom: 50px;    
+    }
+    .left-side-data 
+    h4{
+        font-size: 23px;
+        margin-top: 280px;
+        color: blue;
+    }
+    .left-side-data 
+    h3
+    {
+        font-size: 20px;
+        width: 100px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        font-weight: bolder;
+        padding: 10px;
+    }
+    .left-side-data 
+    > 
+    p
+    {
+        font-size: 24px;
+        padding-top: 10px;
+        padding-bottom: 30px;
+    }
+    .label-text-1 
+    h5 
+    {
+        font-size: 30px;
+        position: relative;
+        padding-bottom: 3px;
+    }
+    .label-text-1 p {
+        font-size: 18px;
+        padding-bottom: 30px;
+    }
+
+/* left Section mediaquery end*/
+/* right-side-data meidaquery start */
+     .feature-section 
+     .right-side-data
+     .text-data
+     {
+         text-align: center;
+         position: relative;     
+         margin: 10px 0px 10px 130px;
+         padding: 10px;
+         position: relative;
+         top: 250px;
+         font-size: 20px;
+         bottom: -110px;
+         border-radius: var(--button-radius);
+         box-shadow: var(--var-light-shadow);
+         width: 310px;
+        }
+        .feature-section 
+        .right-side-data 
+        .fade-down
+        {
+            margin-top: 350px;
+        } 
+     .right-side-data
+     {
+         justify-content: center;
+        background-position: center;
+         background-size: cover;
+         object-fit:cover;
+         height: 430px;
+         margin-top: 110px;
+         width: 360px;
+         bottom: 200px;
+     }
+    }      
+/* right-side-data meidaquery end */
+/* feature section end */
+@media only screen and (max-width: 500px) and (min-width: 301px) {
+    .navbar
+    .brand 
+    img
+    {
+        width: 60px;
+        height: 50px;
+    }    
+    .navbar{
+        height: 150px;
+    }
+    .navbar
+    .button 
+    .register-link 
+    a
+    {
+        padding: 0;
+        margin: 0;
+        display: inline-block;
+    }
+    .navbar
+    .button
+    .get-started-link
+    {
+        width: 100px;
+        font-size: 15px;
+        margin-left: -60px;
+    }
+    .navbar 
+    .button 
+    .toggle-button 
+    {
+        padding: 0;
+        width: 100%;
+        display: inline-block;
+        align-items: center;
+        margin-left: 70px;
+    }
+    .navbar 
+    .button 
+    .toggle-button 
+    i
+    {
+        font-size: 200px;
+        margin-left: -30px;
+    } 
+    .navbar 
+    .button
+     ul
+     {
+        margin:auto;
+        padding: 0px;
+        box-sizing: border-box;
+    }
+    .navbar 
+    .button 
+    a
+    {
+        width: 100px;
+    }
+    .labels 
+    {
+        width: 100%;
+        display: flex;
+        margin-top: 70px;
+        padding: 10px;
+    }       
+    /* banner section mediaquery start */
+    .hero-banner
+    .hero-text h1 
+    {
+        margin: auto;
+        font-size: 30px;
+        padding: 10px;
+        text-align: center;
+    }
+    .hero-banner 
+    .hero-text
+    .offer-text
+    h1{
+        text-align: center;
+        font-size: 10px;
+        margin: auto;
+        padding: 0;
+    }
+   
+    /* banner section mediaquery end */
+    /* offer section mediaquery start*/
+    #p {
+        text-align: center;
+        margin: auto;
+        font-size: 20px;
+        font-weight:bolder;
+        padding: 10px;
+        width: 100% ;
+        color: grey;
+        padding-top: 10px;
+    }
+    .offer-cards-row 
+    > 
+    .cards
+    {
+        font-size: 17px;
+        font-weight: bolder;
+        margin: 20px;
+    }
+    .offer-cards-row  {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+    .offer-container
+    {
+        padding: 0;
+    }
+    .offer-section
+    h1
+    {
+        font-size: 30px;
+    }
+    /* offer section mediaquery end */
+    /* feature section start*/
+    /* left Section mediaquery start */
+    .feature-section
+    {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }    
+    .feature-section 
+    .left-side-data
+    {
+        margin-top: 500px;
+    }
+    .left-side-data{
+        padding: 30px;
+        position: relative;
+        bottom: 50px;    
+    }
+    .left-side-da   ta 
+    h4{
+        font-size: 23px;
+        margin-top: 320px;
+        color: blue;
+    }
+    .left-side-data 
+    h3
+    {
+        font-size: 20px;
+        width: 100px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        font-weight: bolder;
+        padding: 10px;
+    }
+    .left-side-data 
+    > 
+    p
+    {
+        font-size: 17px;
+        font-weight: bolder;
+        padding-top: 10px;
+        padding-bottom: 30px;
+    }
+    .label-text-1 
+    h5 
+    {
+        font-size: 28px;
+        font-weight: bolder;
+        position: relative;
+        padding-bottom: 3px;
+    }
+    .label-text-1 p {
+        font-size: 17px;
+        font-weight: bolder;
+        padding-bottom: 30px;
+    }
+
+/* left Section mediaquery end*/
+/* right-side-data meidaquery start */
+     .feature-section 
+     .right-side-data
+     .text-data
+     {
+         text-align: center;
+         position: relative;     
+         margin: 10px 0px 10px 130px;
+         padding: 10px;
+         position: relative;
+         top: 250px;
+         font-size: 18px;
+         font-weight: bolder;
+         bottom: -150px;
+         border-radius: var(--button-radius);
+         box-shadow: var(--var-light-shadow);
+         width: 310px;
+        }
+        .feature-section 
+        .right-side-data 
+        .fade-down
+        {
+            margin-top: 350px;
+        } 
+     .right-side-data
+     {
+         justify-content: center;
+         background-position: center;
+         background-size: cover;
+         object-fit:cover;
+         height: 430px;
+         margin-left: 20px;
+         margin-top: 150px;
+         width: 360px;
+         bottom: 250px;
+         display: block;
+         margin-left: auto;
+         margin-right: auto;
+        vertical-align: middle;
+     }
+    }      
+/* right-side-data meidaquery end */
+/* feature section end */
+/* 3 */
+@media only screen and (max-width: 900px) and (min-width: 501px) {
+    /* navbar section mediaquery start */
+    .brand
+    img
+    {
+        margin-left: -50px;
+        width: 50px;
+        height: 50px;
+    }
+    .brand
+    a
+    {
+        font-size: 20px;
+    }
+    .navbar{
+        height: 150px;
+    }
+    .navbar
+    .button 
+    .register-link 
+    a
+    {
+        padding: 0;
+        margin: 0;
+        display: inline-block;
+    }
+    .navbar
+    .button
+    .get-started-link
+    {
+        width: 100px;
+        font-size: 15px;
+        margin-left: -60px;
+    }
+    .navbar 
+    .button 
+    .toggle-button 
+    {
+        padding: 0;
+        width: 100%;
+        display: inline-block;
+        align-items: center;
+        margin-left: 70px;
+    }
+    .navbar 
+    .button 
+    .toggle-button 
+    i
+    {
+        font-size: 200px;
+        margin-left: -30px;
+    } 
+    .navbar 
+    .button
+     ul
+     {
+        margin:auto;
+        padding: 0px;
+        box-sizing: border-box;
+    }
+    .navbar 
+    .button 
+    a
+    {
+        width: 100px;
+    }        
+    /* navbar section mediaquery end */
+    /* banner section mediaquery start */
+    .hero-banner
+    .hero-text h1 
+    {
+        margin: auto;
+        font-size: 70px;
+        padding: 10px;
+        text-align: left;
+    }
+    .hero-banner 
+    .hero-text
+    p{
+        text-align: left;
+        font-size: 20px;
+        margin: auto;
+        padding: 0;
+    } 
+    .hero-banner 
+    .hero-text
+    input{
+        font-size: 20px;
+        margin: auto;
+        padding: 15px;
+    }  
+    .hero-banner 
+    .hero-text
+    button{
+        font-size: 20px;
+        margin: auto;
+        padding: 15px;
+    } 
+    .hero-banner 
+    .hero-text
+    .labels
+    p{
+        display: inline;
+        font-size: 22px;
+        padding: 23px;
+    } 
+    .bottom-text
+    p{
+        font-size: 30px;
+    }                
+    .hero-banner 
+    .hero-text
+    .offer-text
+    h1{
+        text-align: center;
+        font-size: 20px;
+        margin: auto;
+        padding: 0;
+    }       
+ 
+    /* banner section mediaquery end */
+    /* offer section mediaquery start*/
+    #p {
+        text-align: center;
+        margin: auto;
+        font-size: 22px;
+        padding: 10px;
+        width: 100% ;
+        color: grey;
+        padding-top: 10px;
+    }
+    .offer-cards-row
+    {    position: relative;
+        top: 50px;
+        display: grid;
+        margin: auto;
+        padding: 10px;
+        justify-content: center;
+        grid-template-columns: auto auto auto;
+        column-gap: 20px;
+        width: 100%;
+    }
+    .offer-cards-row 
+    > 
+    .cards
+    {
+        width: 100%;
+    }
+    .offer-container
+    {
+        padding: 0;
+    }
+    .cards
+    p
+    {
+        font-size: 25px;
+    }
+    /* offer section mediaquery end */
+    /* feature section start*/
+    /* left Section mediaquery start */
+    .feature-section 
+    {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+    }
+    .left-side-data{
+        padding: 30px;
+        position: relative;
+        bottom: 50px;    
+    }
+    .left-side-data 
+    h4{
+        font-size: 30px;
+        margin-top: 100px;
+        color: blue;
+    }
+    .left-side-data 
+    h3
+    {
+        font-size: 28px;
+        width: 100px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        font-weight: bolder;
+        padding: 10px;
+    }
+    .left-side-data 
+    > 
+    p
+    {
+        font-size: 27px;
+        padding-top: 10px;
+        padding-bottom: 30px;
+    }
+    .label-text-1 
+    h5 
+    {
+        font-size: 35px;
+        position: relative;
+        padding-bottom: 3px;
+    }
+    .label-text-1 p {
+        font-size: 30px;
+        padding-bottom: 30px;
+    }
+
+/* left Section mediaquery end*/
+/* right-side-data meidaquery start */
+    .feature-section 
+    .right-side-data
+    .text-data
+     {
+        text-align: center;
+        position: relative;     
+        margin: 10px 0px 10px 130px;
+        padding: 10px;
+        position: relative;
+        top: 250px;
+        font-size: 25px;
+        bottom: -150px;
+        border-radius: var(--button-radius);
+        box-shadow: var(--var-light-shadow);
+        width: 450px;
+        }
+    .feature-section
+    {
+        display: flex;
+        flex-direction: column;
+        
+    }    
+    .feature-section 
+    .right-side-data 
+    .fade-down
+    {
+         margin-top: 350px;
+    } 
+    .right-side-data
+    {
+        background-position: center;
+        background-size: cover;
+        object-fit:cover;
+        height: 500px;
+        margin-top: 140px;
+        margin: 140px 20px 0px 150px;
+        width: 500px;
+        bottom: 210px;
+    }
+/* right-side-data meidaquery end */
+/* feature section end */
+}
+/* MediaQuery End */
