--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1039,14 +1039,14 @@ body{
 /* right-side-data meidaquery end */
 /* feature section end */
 /* 3 */
-@media only screen and (max-width: 900px) and (min-width: 501px) {
+@media only screen and (max-width: 915px) and (min-width: 501px) {
     /* navbar section mediaquery start */
     .brand
     img
     {
         margin-left: -50px;
-        width: 50px;
-        height: 50px;
+        width: 40px;
+        height: 40px;
     }
     .brand
     a
@@ -1054,7 +1054,7 @@ body{
         font-size: 20px;
     }
     .navbar{
-        height: 150px;
+        height: 90px;
     }
     .navbar
     .button 
@@ -1062,35 +1062,28 @@ body{
     a
     {
         padding: 0;
-        margin: 0;
+        margin: 10px 20px 0px 10px;
         display: inline-block;
     }
     .navbar
     .button
     .get-started-link
     {
-        width: 100px;
-        font-size: 15px;
-        margin-left: -60px;
+        display: inline;
+        width: 200px;
+        margin-top: 10px;
+        font-size: 10px;
+        margin-left: -70px;
     }
-    .navbar 
-    .button 
-    .toggle-button 
+    
+    .page-links
     {
-        padding: 0;
-        width: 100%;
-        display: inline-block;
-        align-items: center;
-        margin-left: 70px;
+        font-size: 14px;
     }
-    .navbar 
-    .button 
-    .toggle-button 
-    i
+    .links ul 
     {
-        font-size: 200px;
-        margin-left: -30px;
-    } 
+        margin-left: 19px;
+    }
     .navbar 
     .button
      ul
@@ -1103,15 +1096,271 @@ body{
     .button 
     a
     {
+        font-size: 12px;
         width: 100px;
-    }        
+    } 
     /* navbar section mediaquery end */
+    /* hero image */
+    .hero-image{
+        display: none;
+    }
     /* banner section mediaquery start */
     .hero-banner
     .hero-text h1 
     {
         margin: auto;
-        font-size: 70px;
+        font-size: 59px;
+        padding: 10px;
+        text-align: left;
+    }
+    .hero-banner 
+    .hero-text
+    p{
+        text-align: left;
+        font-size: 17px;
+        margin: auto;
+        padding: 0;
+    } 
+    .hero-banner 
+    .hero-text
+    input{
+        font-size: 20px;
+        margin: auto;
+        padding: 15px;
+    }  
+    .hero-banner 
+    .hero-text
+    button{
+        font-size: 17px;
+        margin: auto;
+        padding: 15px;
+    } 
+    .hero-banner 
+    .hero-text
+    .labels
+    p{
+        display: inline;
+        font-size: 17px;
+        padding: 23px;
+    } 
+    .bottom-text
+    p{
+        font-size: 25px;
+    }                
+    .hero-banner 
+    .hero-text
+    .offer-text
+    h1{
+        text-align: center;
+        font-size: 20px;
+        margin: auto;
+        padding: 0;
+    }       
+    /* banner section mediaquery end */
+    /* offer section mediaquery start*/
+    #p {
+        text-align: center;
+        margin: auto;
+        font-size: 18px;
+        padding: 10px;
+        width: 100% ;
+        color: grey;
+        padding-top: 10px;
+    }
+    .offer-cards-row
+    {    position: relative;
+        top: 50px;
+        display: grid;
+        margin: auto;
+        padding: 10px;
+        justify-content: center;
+        grid-template-columns: auto auto auto;
+        column-gap: 20px;
+        width: 100%;
+    }
+    .offer-cards-row 
+    > 
+    .cards
+    {
+        width: 100%;
+    }
+    .offer-container
+    {
+        padding: 0;
+    }
+    .cards
+    p
+    {
+        font-size: 16px;
+    }
+    /* offer section mediaquery end */
+    /* feature section start*/
+    /* left Section mediaquery start */
+    .feature-section 
+    {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+    }
+    .left-side-data{
+        padding: 30px;
+        position: relative;
+        bottom: 50px;    
+    }
+    .left-side-data 
+    h4{
+        font-size: 25px;
+        margin-top: 50px;
+        color: blue;
+    }
+    .left-side-data 
+    h3
+    {
+        font-size: 24px;
+        width: 100px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        font-weight: bolder;
+        padding: 10px;
+    }
+    .left-side-data 
+    > 
+    p
+    {
+        font-size: 24px;
+        padding-top: 10px;
+        padding-bottom: 30px;
+    }
+    .label-text-1 
+    h5 
+    {
+        font-size: 30px;
+        position: relative;
+        padding-bottom: 3px;
+    }
+    .label-text-1 p {
+        font-size: 25px;
+        padding-bottom: 30px;
+    }
+
+/* left Section mediaquery end*/
+/* right-side-data meidaquery start */
+    .feature-section 
+    .right-side-data
+    .text-data
+     {
+        text-align: center;
+        position: relative;     
+        margin: 10px 0px 10px 130px;
+        padding: 10px;
+        position: relative;
+        top: 250px;
+        font-size: 23px;
+        bottom: -150px;
+        border-radius: var(--button-radius);
+        box-shadow: var(--var-light-shadow);
+        width: 450px;
+        }
+    .feature-section
+    {
+        display: flex;
+        flex-direction: column;
+        
+    }    
+    .feature-section 
+    .right-side-data 
+    .fade-down
+    {
+         margin-top: 350px;
+    } 
+    .right-side-data
+    {
+        background-position: center;
+        background-size: cover;
+        object-fit:cover;
+        height: 500px;
+        margin-top: 140px;
+        margin: 140px 20px 0px 150px;
+        width: 500px;
+        bottom: 210px;
+    }
+/* right-side-data meidaquery end */
+/* feature section end */
+}
+/* 4 */
+@media only screen and (max-width: 1100px) and (min-width: 916px) {
+    /* navbar section mediaquery start */
+    .brand
+    img
+    {
+        margin-left: -50px;
+        width: 40px;
+        height: 40px;
+    }
+    .brand
+    a
+    {
+        font-size: 22px;
+    }
+    .navbar{
+        height: 90px;
+    }
+    .navbar
+    .button 
+    .register-link 
+    a
+    {
+        padding: 0;
+        font-size: 17px;
+        margin: 10px 25px 0px 0px;
+        display: inline-block;
+    }
+    .navbar
+    .button
+    .get-started-link
+    {
+        display: inline;
+        width: 200px;
+        margin-top: 10px;
+        font-size: 13px;
+        margin-left: -70px;
+    }
+    
+    .page-links
+    {
+        font-size: 17px;
+    }
+    .links ul 
+    {
+        margin-left: 19px;
+    }
+    .navbar 
+    .button
+     ul
+     {
+        margin:auto;
+        padding: 0px;
+        box-sizing: border-box;
+    }
+    .navbar 
+    .button 
+    a
+    {
+        font-size: 15px;
+        width: 100px;
+    } 
+    /* navbar section mediaquery end */
+    /* hero image */
+    .hero-image{
+        display: none;
+    }
+    /* banner section mediaquery start */
+    .hero-banner
+    .hero-text h1 
+    {
+        margin: auto;
+        font-size: 60px;
         padding: 10px;
         text-align: left;
     }
@@ -1147,24 +1396,23 @@ body{
     } 
     .bottom-text
     p{
-        font-size: 30px;
+        font-size: 27px;
     }                
     .hero-banner 
     .hero-text
     .offer-text
     h1{
         text-align: center;
-        font-size: 20px;
+        font-size: 22px;
         margin: auto;
         padding: 0;
     }       
- 
     /* banner section mediaquery end */
     /* offer section mediaquery start*/
     #p {
         text-align: center;
         margin: auto;
-        font-size: 22px;
+        font-size: 20px;
         padding: 10px;
         width: 100% ;
         color: grey;
@@ -1194,7 +1442,7 @@ body{
     .cards
     p
     {
-        font-size: 25px;
+        font-size: 20px;
     }
     /* offer section mediaquery end */
     /* feature section start*/
@@ -1213,14 +1461,14 @@ body{
     }
     .left-side-data 
     h4{
-        font-size: 30px;
-        margin-top: 100px;
+        font-size: 25px;
+        margin-top: 50px;
         color: blue;
     }
     .left-side-data 
     h3
     {
-        font-size: 28px;
+        font-size: 24px;
         width: 100px;
         padding-top: 10px;
         padding-bottom: 10px;
@@ -1231,19 +1479,19 @@ body{
     > 
     p
     {
-        font-size: 27px;
+        font-size: 24px;
         padding-top: 10px;
         padding-bottom: 30px;
     }
     .label-text-1 
     h5 
     {
-        font-size: 35px;
+        font-size: 30px;
         position: relative;
         padding-bottom: 3px;
     }
     .label-text-1 p {
-        font-size: 30px;
+        font-size: 25px;
         padding-bottom: 30px;
     }
 
@@ -1259,7 +1507,7 @@ body{
         padding: 10px;
         position: relative;
         top: 250px;
-        font-size: 25px;
+        font-size: 23px;
         bottom: -150px;
         border-radius: var(--button-radius);
         box-shadow: var(--var-light-shadow);
