--- a/assets/css/Home.css
+++ b/assets/css/Home.css
@@ -5,8 +5,8 @@
 :root{
     --var-bg-color :linear-gradient(to left ,rgb(7, 32, 70) ,rgb(11, 18, 77));
     --var-bg-light-color : rgb(73, 172, 243);
-    --background-image :linear-gradient(rgba(0, 0, 0, 0.171),rgba(0, 0, 0, 0.748)),url(../images/background.jpeg);
-    --var-color-white :white;
+    --background-image :linear-gradient(to right ,rgba(0, 0, 0, 0.744),rgba(0, 0, 0, 0.113)),url(../images/background.jpg);
+       --var-color-white :white;
     --var-Roboto-font :'Roboto', sans-serif;
     --var-poppins-font : 'Poppins', sans-serif;
     --var-light-shadow :  0 0 20px rgba(171, 169, 169, 0.459);
@@ -24,20 +24,24 @@
     --var-left-slide : leftslide 1.3s ;
 }
 /* hero banner section*/
+.banner-container{
+    background-position: center;
+    background-size:cover ;
+    object-fit: contain;
+}
 .hero-banner{
     padding: 30px;
     width: auto;
     display: grid;
     height:100vh;
     overflow: hidden;
-    grid-template-columns:auto auto;
     column-gap: 200px;
 }
 .hero-text{
     padding: 10px;
     position: relative;
     width: 600px;
-    top: 60px;
+    top: 20px;
     font-family: var(--var-poppins-font);
 }
 .hero-text > h1{
@@ -80,15 +84,20 @@
 
 }
 .hero-text button{
-    background: var(--button-colors);
-    padding: 10px;
+    background:transparent;
+    padding: 6px 10px;
+    cursor: pointer;
     color: var(--var-color-white);
     font-family:var(--var-poppins-font);
     text-decoration: none;
     animation: var(--var-paragraph-animation);
     box-shadow:var(--var-light-shadow);
-    border-radius:var(--button-radius);
-    border:none;
+    border:3px solid var(--button-colors);
+}
+.hero-text button:hover{
+background-color: var(--button-colors);
+transition: 0.4s linear ;
+box-shadow: 0 0 20px var(--button-colors);
 }
 .hero-text input{
     width: 400px;
@@ -97,6 +106,10 @@
     border:var(--var-input-border);
     border-radius: var(--button-radius);
     box-shadow: var(--var-light-shadow);
+    outline: none;
+}
+.hero-text input:focus{
+    outline:3px solid var(--button-colors);
 }
 .hero-text form{
     margin-top: 25px;
@@ -136,13 +149,11 @@
     object-fit: contain;
     min-height:100%;
     height: auto;
-
     animation:var(--var-image-animation-zoom);
     width: 100%;
     padding: 10px;
     object-position: center;
     position: relative;
-
     filter: drop-shadow(--var-light-shadow);
  }
 @keyframes imagezoom{
@@ -158,7 +169,7 @@
  /* bottom tags */
  .bottom-text{
     position: relative;
-    bottom: 20px;
+    top:60px;
 }
 .bottom-text  p{
     color: var(--var-color-white);
@@ -441,7 +452,6 @@
 .experience .card-section .card
 {
     width: 250px;
-
     height: 200px;
     padding: 10px;
 }
@@ -460,4 +470,242 @@
     text-transform: uppercase;
     font-size: 12px;
     font-family: var(--var-poppins-font);
+}
+/* services containers */
+.services-section
+{
+    height: auto;
+    background: var(--var-bg-color);
+    position: relative;
+    bottom:100px;
+    padding:50px;
+
+}
+
+.services-section  .text-section > h1 {
+    
+    font-family: var(--var-poppins-font);
+    color:var(--var-color-white);
+    text-transform: capitalize;
+    text-align: center;
+    font-size:45px;
+    margin-top: 5px;
+    padding-left: 20px;
+
+}
+.services-section .text-section p
+{   padding-top: 10px;
+    font-size: 15px;
+    color: rgba(255, 255, 255, 0.651);
+    text-align: center;
+
+}
+.container-sections
+{
+    padding: 40px;
+    margin-top: 20px !important;
+    height: auto;
+    display: grid;
+    width: 1100px;
+    margin: auto;
+    overflow: hidden;
+    grid-template-columns: auto auto;
+    column-gap: 15px;
+
+}
+
+.left-container
+{   box-shadow: var(--var-dark-shadow);
+    min-height: 200px;
+    height: 520px;
+    background-color: rgba(51, 27, 136, 0.315);
+    width: 340px;
+    border-radius: var(--button-radius);
+    padding: 30px;
+
+}
+/* icons css */
+.left-container .icons
+{
+    color: rgb(0, 179, 255);
+    height: 26px;
+    width: 25px;
+    padding: 10px;
+    border-radius: 50%;
+    font-size: 25px;
+    box-shadow: var(--var-dark-shadow);
+    background-color: rgba(68, 68, 238, 0.431);
+}
+/* left side headings */
+
+.left-container .headings h1{
+    padding-top: 20px;
+    font-family: var(--var-poppins-font);
+    color: white; 
+    white-space: nowrap;
+    font-size: 30px;
+}
+.left-container .headings p{
+    padding-top: 10px;
+    padding-bottom: 10px;
+    text-overflow: ellipsis;
+    font-size: 13px;
+    font-weight: lighter;
+    font-family: var(--var-Roboto-font)!important;
+    color: rgba(255, 255, 255, 0.7); 
+}
+.includes{
+    padding-top: 10px;
+
+}
+.includes h1{
+    color:white;
+    font-size: 20px;
+}
+.includes h4{
+    color: rgba(255, 255, 255, 0.861);
+    font-weight: lighter;
+  
+}
+.includes ul{
+    margin-top: 15px;
+    list-style: none;
+}
+.includes ul li{
+    padding: 5px;
+    font-size: 10px;
+}
+.includes ul li .icon{
+    
+    color: white;
+    padding: 5px;
+    font-size: 10px;
+    border-radius: 50%;
+    position: relative;
+    top:5px;
+    background: var(--button-colors);
+}
+/* right container */
+.right-container
+{
+    display: grid;
+    grid-template-columns: auto auto;
+    height: 500px;
+    column-gap: 15px;
+    row-gap: 15px;
+}
+
+.small-containers
+{
+    padding: 20px;
+
+    box-shadow: var(--var-dark-shadow);
+    min-height: 200px;
+    height: 250px;
+    background-color: rgba(51, 27, 136, 0.315);
+    width: 340px;
+    border-radius: var(--button-radius);
+}
+.view-details >a{
+    text-align: end;
+    display: flex;
+    justify-content: end;    
+    font-size: 13px;
+    color: white ;
+    text-decoration: none;
+    padding-bottom: 20px;
+    position: relative;
+    bottom:10px; 
+    font-family: var(--var-Roboto-font);
+       
+}
+.view-details > a:hover{
+    text-shadow: 2px 2px 10px black;
+    transition: 0.4s linear;
+    color: var(--button-colors);
+}
+
+/* icons css */
+.right-container .user-icon
+{
+    color: rgb(255, 0, 0);
+    padding: 8px 8px;
+    height: 25px;
+    width: 25px;
+    border-radius: 50%;
+    font-size: 18px;
+    box-shadow: var(--var-dark-shadow);
+    background-color: rgba(208, 20, 20, 0.431);
+}
+
+.right-container .hand-icon
+{
+    color: rgb(17, 16, 16);
+    padding: 8px 8px;
+    border-radius: 50%;
+    font-size: 18px;
+    height: 25px;
+    width: 25px;
+    box-shadow: var(--var-dark-shadow);
+    background-color: rgba(87, 76, 76, 0.431);
+}
+
+.right-container .gear-icon
+{
+    color: rgba(241, 233, 4, 0.877);
+    padding: 8px 8px;
+    height: 25px;
+    width: 25px;
+    border-radius: 50%;
+    font-size: 18px;
+    box-shadow: var(--var-dark-shadow);
+    background-color: rgba(207, 191, 11, 0.431);
+}
+
+.right-container .file-icon
+{
+    color: rgba(46, 172, 4, 0.877);
+    padding: 8px 8px;
+    height: 25px;
+    width: 25px;
+    border-radius: 50%;
+    font-size: 18px;
+    box-shadow: var(--var-dark-shadow);
+    background-color: rgba(11, 207, 40, 0.431);
+}
+/* right side headings */
+
+.right-container .headings h1{
+    padding-top: 20px;
+    font-family: var(--var-poppins-font);
+    color: white; 
+    white-space: nowrap;
+    font-size: 25px;
+}
+.right-container .headings p{
+    padding-top: 10px;
+    padding-bottom: 10px;
+    text-overflow: ellipsis;
+    font-size: 13px;
+    font-weight: lighter;
+    font-family: var(--var-Roboto-font)!important;
+    color: rgba(255, 255, 255, 0.7); 
+}
+
+.small-containers >.headings>.view-details >a{
+    
+    justify-content: start;    
+    font-size: 13px;
+    color: white ;
+    text-decoration: none;
+   
+    position: relative;
+    top:20px !important; 
+    font-family: var(--var-Roboto-font);
+       
+}
+.small-containers >.headings>.view-details > a:hover{
+    text-shadow: 2px 2px 10px black;
+    transition: 0.4s linear;
+    color: var(--button-colors);
 }
