--- a/assets/css/contactus.css
+++ b/assets/css/contactus.css
@@ -17,12 +17,19 @@
   opacity: 0;
   transition: all 1.3s;
 }
-.hiddenimg 
+.heading 
 {
     filter: blur(1px);
-    transform: translateX(100%);
+    transform: translateY(100%);
   opacity: 0;
-  transition: all 1.3s;
+  transition: all 1.6s;
+}
+.paragraph 
+{
+    filter: blur(1px);
+    transform: translateY(100%);
+  opacity: 0;
+  transition: all 1.6s;
 }
 .show
 {
@@ -40,6 +47,7 @@
 .box-item
 {
     display: flex;
+    flex-wrap: wrap;
     flex: 0 0 100%;
     max-width: 100%;
     margin-top: 100px;
@@ -67,7 +75,7 @@
 {
     flex: 0 0 100%;
     max-width: 100%;
-    height: 300px;
+    height: 350px;
     background-color: var(--var-color-white);
     box-shadow: var(--var-light-shadow);
   background-size: cover;
@@ -137,7 +145,7 @@
     perspective: inherit;
     z-index: 2;
     transform: translateX(-50%)translateZ(60px) scale(.94);
-    top: 23%;
+    top: 10%;
 }
 .flip-box-back:hover .inner
 {
@@ -153,9 +161,6 @@
     top: 13%;
 
 }
-
-
-
 .flip-box-header
 {
     text-align: center;
@@ -189,7 +194,7 @@
     text-decoration: none;
     color: var(--button-colors);
 }
-.emailbtn
+.flip-button
 {
     padding: 10px 70px;
     color: white !important;
@@ -211,6 +216,10 @@ width: 100%;
 overflow: hidden;
 background:var(--background-image);
 background-position: center;
+}
+.contact-text
+{
+
 }
 .contact-text h1
 {
@@ -234,10 +243,10 @@ background-position: center;
     font-family: var(--var-poppins-font); 
     color: var(--var-color-white);
 }
-.contact-section
-{
-    margin-top: 150px;
-}
+    .contact-section
+    {
+        margin: 250px 0px;
+    }
 .p-top-bottom
 {
     padding-top: 100px;
@@ -271,13 +280,7 @@ padding-right: 100px;
     font-size: 20px;
     font-weight: 500;
 }
-.btn1
-{
-    color: var(--var-color-white) !important;
-    border-radius: var(--button-radius);
-    padding: 10px 90px;
-    background-color: var(--button-colors);
-}
+
 /* card container end  */
 .padd-15
 {
